--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "emotion": "^10.0.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
