--- a/front-redux/package.json
+++ b/front-redux/package.json
@@ -34,7 +34,9 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.3",
+    "reselect": "^4.0.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
