--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "homepage": "",
   "dependencies": {
+    "@emotion/core": "^10.0.35",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
