first commit add dependencies

--- a/front/package.json
+++ b/front/package.json
@@ -24,11 +24,13 @@
   "license": "MIT",
   "homepage": "",
   "dependencies": {
-    "@emotion/core": "^10.0.35",
+    "@lemoncode/fonk": "^1.4.0",
+    "@lemoncode/fonk-formik": "^4.0.1",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "emotion": "^10.0.27",
+    "formik": "^2.1.5",
     "lodash.merge": "^4.6.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
