--- a/front/prod.env
+++ b/front/prod.env
@@ -1,2 +1,5 @@
 NODE_ENV=production
 GRAPHQL_URL=/graphql/employee
+BASE_API_URL=http://localhost:8081
+BASE_SOCKET_URL=http://localhost:3000
+BASE_URL=http://localhost:8080
