--- a/front/package.json
+++ b/front/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/parser": "^2.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.23",
+    "copy-webpack-plugin": "^6.1.1",
     "css-loader": "^3.2.0",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^6.7.1",
@@ -82,6 +83,7 @@
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "write-file-webpack-plugin": "^4.5.1"
   }
 }
