--- a/front/prod.env
+++ b/front/prod.env
@@ -1,5 +1,5 @@
 NODE_ENV=production
-GRAPHQL_URL=/graphql/employee
+GRAPHQL_URL=http://localhost:8081/graphql/employee
 BASE_API_URL=http://localhost:8081
 BASE_SOCKET_URL=http://localhost:3000
-BASE_URL=http://localhost:8080
+BASE_URL=http://localhost:3001
