--- a/back/package.json
+++ b/back/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "run-p -l type-check:watch start:dev",
+    "start:mock": "cross-env DATABASE=mock npm run start ",
     "start:dev": "nodemon --exec babel-node --extensions \".ts\" src/index.ts",
     "start:debug": "run-p -l type-check:watch \"start:dev -- --inspect-brk\"",
     "start:prod": "node ./dist/index.js",
@@ -35,8 +36,8 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.36",
     "@types/socket.io": "^2.1.10",
-    "cross-env": "^7.0.2",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
@@ -45,8 +46,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.9",
     "regenerator-runtime": "^0.13.7",
     "socket.io": "^2.3.0"
   }
