ref:#35 refactor folder structure, apiMock and Api , async calls

--- a/back/.babelrc
+++ b/back/.babelrc
@@ -13,5 +13,18 @@
       }
     ]
   ],
-  "plugins": ["@babel/plugin-proposal-optional-chaining"]
+  "plugins": ["@babel/plugin-proposal-optional-chaining",
+    [
+      "module-resolver",
+      {
+        "root": ["."],
+        "alias": {
+          // "common": "./src/common",
+          // "common-app": "./src/common-app",
+          "core": "./src/core",
+          "dals": "./src/dals",
+          "pods": "./src/pods"
+        }
+      }
+    ]]
 }
