--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "run-p -l type-check:watch start:dev",
-    "start:mock": "cross-env DATABASE=mock npm run start ",
+    "start:mock": "cross-env API_MOCK=true npm run start ",
     "start:dev": "nodemon --exec babel-node --extensions \".ts\" src/index.ts",
     "start:debug": "run-p -l type-check:watch \"start:dev -- --inspect-brk\"",
     "start:prod": "node ./dist/index.js",
@@ -38,6 +38,7 @@
     "@types/express": "^4.17.7",
     "@types/mongoose": "^5.7.36",
     "@types/socket.io": "^2.1.10",
+    "babel-plugin-module-resolver": "^4.0.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
