ref:#35 added colors better console logs tracking

--- a/back/package.json
+++ b/back/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
