--- a/back/.env.example
+++ b/back/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=8081
+SOCKET_PORT=3000
 API_MOCK=false
 API_URL=/api
-CORS_ORIGIN=*
+CORS_ORIGIN=http://localhost:8080
 MONGODB_URI=mongodb://localhost:27017/task-planning
