--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "run-p -l type-check:watch start:dev start:local-db",
-    "start:mock": "cross-env MOCK_RESPOSITORY=true npm run start ",
+    "start:mock": "cross-env MOCK_RESPOSITORY=true run-p -l type-check:watch start:dev",
     "start:dev": "nodemon --exec babel-node --extensions \".ts\" src/index.ts",
     "start:debug": "run-p -l type-check:watch \"start:dev -- --inspect-brk\"",
     "start:prod": "node ./dist/index.js",
