--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "@lemoncode/fonk-formik": "^4.0.1",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "@testing-library/dom": "^7.26.6",
     "axios": "^0.19.2",
     "emotion": "^10.0.27",
     "formik": "^2.1.5",
