--- a/back/.env.example
+++ b/back/.env.example
@@ -5,3 +5,4 @@ MOCK_REPOSITORY=false
 API_URL=/api
 CORS_ORIGIN=http://localhost:8080
 MONGODB_URI=mongodb://localhost:27017/task-planning
+STATIC_FILES_PATH="../../front/dist"
