--- a/back/package.json
+++ b/back/package.json
@@ -12,8 +12,8 @@
     "start:local-db": "docker-compose up || echo \"Run docker-compose up manually\"",
     "stop:local-db": "docker-compose down || echo \"Run docker-compose down manually\"",
     "build": "run-p -l type-check build:prod",
-    "build:prod": "npm run clean && babel src -d dist --ignore=\"./src/test-runners\" --extensions \".ts\"",
-    "build:dev": "npm run clean && babel src -d dist --ignore=\"./src/test-runners\" --extensions \".ts\" --source-maps",
+    "build:prod": "npm run clean && babel src -d dist --ignore=\"./src/test-runners,./src/**/*.spec.ts\" --extensions \".ts\"",
+    "build:dev": "npm run clean && babel src -d dist --ignore=\"./src/test-runners,./src/**/*.spec.ts\" --extensions \".ts\" --source-maps",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "test": "cross-env NODE_ENV=test jest -c ./config/test/jest.js --verbose",
