--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,11 +1,9 @@
 name: Continuos Deployment workflow
 
-on: pull_request
-  # push:
-  #   branches:
-  #     - master
-
-    
+on:
+  push:
+    branches:
+      - master
 
 env:
   HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
