--- a/front/dev.env
+++ b/front/dev.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
-GRAPHQL_URL=http://localhost:8081/graphql/employee
+BASE_API_URL=http://localhost:8081
+BASE_APP_URL=http://localhost:8080
