--- a/front/prod.env
+++ b/front/prod.env
@@ -1,2 +1,3 @@
 NODE_ENV=production
-GRAPHQL_URL=/graphql/employee
+BASE_API_URL=https://www.tshirtplanning.com
+BASE_APP_URL=https://www.tshirtplanning.com
