--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   dev-cd:
     uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
+    with:
+      files-to-zip: 'back/** front/** Dockerfile' 
     secrets:
       AWS_EB_APP_NAME: ${{secrets.DEV_AWS_EB_APP_NAME}}
       AWS_EB_ENV_NAME: ${{secrets.DEV_AWS_EB_ENV_NAME}}
