--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   prod-cd:
     uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
+    with:
+      files-to-zip: 'back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore' 
     secrets:
       AWS_EB_APP_NAME: ${{secrets.AWS_EB_APP_NAME}}
       AWS_EB_ENV_NAME: ${{secrets.AWS_EB_ENV_NAME}}
