--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -9,7 +9,8 @@ jobs:
   dev-cd:
     uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
     with:
-      files-to-zip: 'back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore'
+      files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
+      dockerArgs: "BASE_API_URL=https://dev.tshirtplanning.com"
     secrets:
       AWS_EB_APP_NAME: ${{secrets.DEV_AWS_EB_APP_NAME}}
       AWS_EB_ENV_NAME: ${{secrets.DEV_AWS_EB_ENV_NAME}}
