--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -18,3 +18,4 @@ jobs:
       AWS_DEPLOY_SECRET_ACCESS_KEY: ${{secrets.DEV_AWS_DEPLOY_SECRET_ACCESS_KEY}}
       AWS_REGION: ${{secrets.DEV_AWS_REGION}}
       AWS_DEPLOY_S3_BUCKET: ${{secrets.DEV_AWS_DEPLOY_S3_BUCKET}}
+      DEV_BASE_API_URL: ${{secrets.DEV_BASE_API_URL}}
