--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -11,11 +11,4 @@ jobs:
     with:
       files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
       dockerArgs: BASE_API_URL=${{secrets.DEV_BASE_API_URL}}
-    secrets:
-      AWS_EB_APP_NAME: ${{secrets.DEV_AWS_EB_APP_NAME}}
-      AWS_EB_ENV_NAME: ${{secrets.DEV_AWS_EB_ENV_NAME}}
-      AWS_DEPLOY_ACCESS_KEY_ID: ${{secrets.DEV_AWS_DEPLOY_ACCESS_KEY_ID}}
-      AWS_DEPLOY_SECRET_ACCESS_KEY: ${{secrets.DEV_AWS_DEPLOY_SECRET_ACCESS_KEY}}
-      AWS_REGION: ${{secrets.DEV_AWS_REGION}}
-      AWS_DEPLOY_S3_BUCKET: ${{secrets.DEV_AWS_DEPLOY_S3_BUCKET}}
-      DEV_BASE_API_URL: ${{secrets.DEV_BASE_API_URL}}
+    secrets: inherit
