--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -7,8 +7,14 @@ on:
       - develop
 jobs:
   dev-cd:
-    uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
-    with:
-      files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
-      dockerArgs: BASE_API_URL=${{secrets.DEV_BASE_API_URL}}
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
+        with:
+          files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
+          dockerArgs: BASE_API_URL=${{secrets.DEV_BASE_API_URL}}
+    # uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
+    # with:
+    #   files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
+    #   dockerArgs: BASE_API_URL=${{secrets.DEV_BASE_API_URL}}
+    # secrets: inherit
