--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -5,16 +5,14 @@ on:
   push:
     branches:
       - develop
+
+env:
+  BASE_API_URL: ${{secrets.DEV_BASE_API_URL}}
+
 jobs:
   dev-cd:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
-        with:
-          files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
-          dockerArgs: BASE_API_URL=${{secrets.DEV_BASE_API_URL}}
-    # uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
-    # with:
-    #   files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
-    #   dockerArgs: BASE_API_URL=${{secrets.DEV_BASE_API_URL}}
-    # secrets: inherit
+    uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
+    with:
+      files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
+      dockerArgs: BASE_API_URL=${{env.BASE_API_URL}}
+    secrets: inherit
