--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    env:
+    outputs:
       dockerArgs: BASE_API_URL=${{secrets.DEV_BASE_API_URL}}
     steps:
       - run: echo Setup dockerArgs
@@ -18,7 +18,7 @@ jobs:
     uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
     with:
       files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
-      dockerArgs: ${{needs.setup.env.dockerArgs}}
+      dockerArgs: ${{needs.setup.outputs.dockerArgs}}
     secrets:
       AWS_EB_APP_NAME: ${{secrets.DEV_AWS_EB_APP_NAME}}
       AWS_EB_ENV_NAME: ${{secrets.DEV_AWS_EB_ENV_NAME}}
