--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -10,7 +10,7 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
-      - uses: lemoncode/actions/.github/workflows/aws-ebs-action.yml@v1
+      - uses: lemoncode/actions/.github/actions/aws-ebs-action.yml@main
         with:
           files-to-zip: "back/** back/.babelrc  front/** front/.babelrc Dockerfile .dockerignore"
           dockerArgs: BASE_API_URL=${{secrets.DEV_BASE_API_URL}}
