--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -10,7 +10,8 @@ jobs:
     uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
     with:
       files-to-zip: 'back/** back/.babelrc front/** front/.babelrc Dockerfile .dockerignore' 
-      dockerArgs: "BASE_API_URL=https://tshirtplanning.com"
+      dockerArgs: "BASE_API_URL=https://tshirtplanning.com \
+        BASE_APP_URL=https://tshirtplanning.com"
     secrets:
       AWS_EB_APP_NAME: ${{secrets.AWS_EB_APP_NAME}}
       AWS_EB_ENV_NAME: ${{secrets.AWS_EB_ENV_NAME}}
