--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -5,18 +5,61 @@ on:
   push:
     branches:
       - develop
+env:
+  IMAGE_NAME: ${{secrets.AWS_DOCKER_REGISTRY}}/tshirtplanning:dev-${GITHUB_SHA}-${GITHUB_RUN_ATTEMPT}
 
 jobs:
-  dev-cd:
-    uses: lemoncode/actions/.github/workflows/aws-ebs.yml@main
-    with:
-      files-to-zip: "back/** back/.babelrc front/** front/.babelrc Dockerfile .dockerignore"
-      dockerArgs: "BASE_API_URL=https://dev.tshirtplanning.com \
-        BASE_APP_URL=https://dev.tshirtplanning.com"
+  build-image:
+    runs-on: ubuntu-latest
+    environment:
+      name: 'Development'
+      url: http://dev.tshirtplanning.com
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: AWS login
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_DEPLOY_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_DEPLOY_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Build and push docker image
+        run: |
+          docker build \
+          --build-arg BASE_API_URL=https://dev.tshirtplanning.com \
+          --build-arg BASE_APP_URL=https://dev.tshirtplanning.com \
+          -t ${{env.IMAGE_NAME}} .
+          docker push ${{env.IMAGE_NAME}}
+
+  deploy:
+    needs: [build-image]
+    uses: lemoncode/actions/.github/workflows/aws-ec2-docker-deploy.yml@main
     secrets:
-      AWS_EB_APP_NAME: ${{secrets.DEV_AWS_EB_APP_NAME}}
-      AWS_EB_ENV_NAME: ${{secrets.DEV_AWS_EB_ENV_NAME}}
-      AWS_DEPLOY_ACCESS_KEY_ID: ${{secrets.DEV_AWS_DEPLOY_ACCESS_KEY_ID}}
-      AWS_DEPLOY_SECRET_ACCESS_KEY: ${{secrets.DEV_AWS_DEPLOY_SECRET_ACCESS_KEY}}
-      AWS_REGION: ${{secrets.DEV_AWS_REGION}}
-      AWS_DEPLOY_S3_BUCKET: ${{secrets.DEV_AWS_DEPLOY_S3_BUCKET}}
+      AWS_DEPLOY_ACCESS_KEY_ID: ${{secrets.AWS_DEPLOY_ACCESS_KEY_ID}}
+      AWS_DEPLOY_SECRET_ACCESS_KEY: ${{secrets.AWS_DEPLOY_SECRET_ACCESS_KEY}}
+      AWS_REGION: ${{secrets.AWS_REGION}}
+      AWS_EC2_INSTANCE_ID: ${{secrets.DEV_AWS_EC2_INSTANCE_ID}}
+      AWS_DOCKER_REGISTRY: ${{secrets.AWS_DOCKER_REGISTRY}}
+      DOCKER_IMAGE_NAME: ${{secrets.AWS_DOCKER_REGISTRY}}/tshirtplanning:dev-${GITHUB_SHA}-${GITHUB_RUN_ATTEMPT}
+      DOCKER_RUN_PARAMS: -p 3000:3000
+      S3_ENV_FILE_BUCKET: ${{secrets.ENV_BUCKET_NAME}}
+      S3_ENV_FILE_KEY: ${{secrets.DEV_ENV_BUCKET_KEY}}
+      SSH_KEY: ${{secrets.SSH_KEY}}
+      SSH_USER: ${{secrets.SSH_USER}}
+
+  configure-https:
+    needs: [deploy]
+    uses: lemoncode/actions/.github/workflows/aws-ec2-configure-https.yml@main
+    with:
+      dockerExposedPort: 3000
+    secrets:
+      AWS_DEPLOY_ACCESS_KEY_ID: ${{secrets.AWS_DEPLOY_ACCESS_KEY_ID}}
+      AWS_DEPLOY_SECRET_ACCESS_KEY: ${{secrets.AWS_DEPLOY_SECRET_ACCESS_KEY}}
+      AWS_REGION: ${{secrets.AWS_REGION}}
+      AWS_EC2_INSTANCE_ID: ${{secrets.DEV_AWS_EC2_INSTANCE_ID}}
+      SSH_KEY: ${{secrets.SSH_KEY}}
+      SSH_USER: ${{secrets.SSH_USER}}
+      DOMAIN_RECORD_NAME: ${{secrets.DEV_AWS_DOMAIN_RECORD_NAME}}
+      EMAIL: ${{secrets.CERT_EMAIL}}
