--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: 'Development'
-      url: http://dev.tshirtplanning.com
+      url: https://dev.tshirtplanning.com
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: AWS login
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v1-node16
         with:
           aws-access-key-id: ${{ secrets.AWS_DEPLOY_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_DEPLOY_SECRET_ACCESS_KEY }}
