--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -27,7 +27,8 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
       - name: Build and push docker image
         run: |
-          docker build \
+          docker buildx build \
+          --platform linux/amd64,linux/arm64 \
           --build-arg BASE_API_URL=https://dev.tshirtplanning.com \
           --build-arg BASE_APP_URL=https://dev.tshirtplanning.com \
           -t ${{env.IMAGE_NAME}} .
