build only in arm

--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -32,12 +32,11 @@ jobs:
           docker buildx create --name multi-arch-builder
           docker buildx use multi-arch-builder
           docker buildx build \
-          --platform linux/amd64,linux/arm64 \
+          --platform linux/arm64 \
           --push \
           --build-arg BASE_API_URL=https://dev.tshirtplanning.com \
           --build-arg BASE_APP_URL=https://dev.tshirtplanning.com \
           -t ${{env.IMAGE_NAME}} .
-          docker push ${{env.IMAGE_NAME}}
 
   deploy:
     needs: [build-image]
