--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -25,18 +25,13 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
-      - name: Set up QEMU (for docker buildx)
-        uses: docker/setup-qemu-action@v2
       - name: Build and push docker image
         run: |
-          docker buildx create --name multi-arch-builder
-          docker buildx use multi-arch-builder
-          docker buildx build \
-          --platform linux/arm64 \
-          --push \
+          docker build \
           --build-arg BASE_API_URL=https://dev.tshirtplanning.com \
           --build-arg BASE_APP_URL=https://dev.tshirtplanning.com \
           -t ${{env.IMAGE_NAME}} .
+          docker push ${{env.IMAGE_NAME}}
 
   deploy:
     needs: [build-image]
