--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -42,4 +42,4 @@ jobs:
         with:
           app-name: ${{ secrets.AZURE_APP_NAME }}
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          images: ${{ env.IMAGE_NAME }}
+          images: ghcr.io/lemoncode/bar.io:dev-public-portal-4b882cee2fd5c4d513a4ab9ab204bfffb24f9a07
