--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - master
 env:
-  IMAGE_NAME: ghcr.io/lemoncode/planning-poker-example:prod-${GITHUB_SHA}
+  IMAGE_NAME: ghcr.io/lemoncode/planning-poker-example:prod-${{github.run_id}}-${{github.run_attempt}}
 
 permissions:
   contents: 'read'
